--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-.vscode/ipch/8d87e09db06cd812/COLD.ipch
-.vscode/ipch/12b788420436f59/DICEGAME.ipch
-.vscode/ipch/8d87e09db06cd812/mmap_address.bin
+.vscode/
+.gitignore
